# abseil-cpp-kos

./: CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE.txt  README.md  THIRD-PARTY-NOTICES.txt
CMake/: AbseilHelpers.cmake  README.md
CMake/Googletest/: CMakeLists.txt.in
absl/base/: config.h
absl/base/internal/: unscaledcycleclock.cc
absl/container/: btree_test.cc
absl/copts/: GENERATED_AbseilCopts.cmake  GENERATED_copts.bzl  copts.py
absl/debugging/: CMakeLists.txt  failure_signal_handler.cc  failure_signal_handler_test.cc
absl/debugging/internal/: elf_mem_image.cc  vdso_support.cc
absl/flags/: flag_test.cc  parse_test.cc
absl/flags/internal/: usage_test.cc
absl/hash/internal/: low_level_hash.cc
absl/numeric/: int128_test.cc
absl/random/: uniform_int_distribution_test.cc  uniform_real_distribution_test.cc
absl/random/internal/: iostream_state_saver_test.cc
absl/status/: statusor_test.cc
absl/strings/: str_split_test.cc
absl/strings/internal/: cord_rep_crc_test.cc  cordz_info_test.cc
absl/strings/internal/str_format/: convert_test.cc
absl/synchronization/: blocking_counter_test.cc
absl/time/: civil_time_test.cc  clock_test.cc
kos/: cross-build.sh  run-tests.sh
kos/cmake/: tests.cmake
kos/example/: CMakeLists.txt  README.md  cross-build.sh
kos/example/einit/: CMakeLists.txt
kos/example/einit/src/: init.yaml.in  security.psl.in
kos/example/hello/: CMakeLists.txt
kos/example/hello/src/: main.cpp
